# MiniEDR_Project

./: .gitignore  CMakeLists.txt  README.md
bpf/: processExec.bpf.c  processExec.h  vmlinux.h
config/: config.json
include/collectors/: iEventCollector.h  processCollector.h
include/core/: configManager.h  event.h  eventQueue.h  logger.h  ringBufferPoller.h
src/: main.cpp
src/collectors/: processCollector.cpp
